fixed progress cards
Fixed images being too large. Fixed third card overlapping underneath the other two despite having enough space to fit. Fixed card height issues.

--- a/src/client/styles.css
+++ b/src/client/styles.css
@@ -195,7 +195,7 @@
     display: flex;
     flex-direction: column; 
     flex: 0 0 40%; /* Flex property to take up remaining space */
-    align-items: center;  /* Align "Progress Overview" to the center */
+    align-items: stretch;  /* Align "Progress Overview" to the center */
     background-color: #2e2e31; /* Light background color */
   }
 
@@ -203,13 +203,13 @@
     font-size: 1.25rem; /* Adjust the font size as needed */
     color: #ffffff; /* Light color for text */
     margin-top: 20px; /* Add margin to the top */
+    align-self: center; /* Align text to the center */
   }
 
   .progress-cards {
     display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
+    justify-content: center;  /* Center the cards */
+    flex-wrap: wrap;  /* Wrap the cards if they exceed the container width */
     margin: 15px 0; /* Add margin to the top and bottom */
     color: #ffffff; /* Light color for text */
 
@@ -218,17 +218,19 @@
   .progress-card-1,
   .progress-card-2,
   .progress-card-3 {
+    display: flex;
     flex-direction: column;
-    justify-content: center;
+    flex: 0 0 25%;  /* Make each card take up 25% space of its container */
+    justify-content: space-between; /* Space between each card */
     align-items: center;
     padding: 30px;
     margin: 10px;
+    height: 400px;
     border: 1px solid #ccc;
     border-radius: 5px;
   }
 
   .progress-cards h3 {
-    /* margin-bottom: 200px; */
     font-family: "Montserrat-Bold", Helvetica;
   }
 
@@ -238,18 +240,20 @@
     font-weight: 400;
     color: #d8e1d9;
     font-size: 17px;
-
+    max-height: 60px; /* Set the maximum height of the text */
+    overflow: hidden; /* Hide text overflow. Any text that exceeds the max height will not be shown */
   }
 
   .progress-card-image {
     display: flex;
-    width: 5%;
-    height: 5%;
+    justify-content: center;
+    align-items: center;
+    margin: 10px 0;
   }
 
   .progress-card-image img{
-    justify-content: center;
-    align-items: center;
+    width: 100px;
+    height: 100px;
   }
 
   .progress-button {
